praktikum/wortmann/files/deployments/tig-stack/service.yml
kind: Service
apiVersion: v1
metadata:
  name: sgse22-grafana
  namespace: sgse22-tig
spec:
  selector:
    app: sgse22-grafana
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: sgse22-influxdb
  namespace: sgse22-tig
spec:
  selector:
    app: sgse22-influxdb
  ports:
    - name: http-2
      port: 80
      protocol: TCP
      targetPort: 8086
