praktikum/wortmann/files/deployments/tig-stack/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgse22-grafana
  namespace: sgse22-tig
spec:
  rules:
    - host: sgse22-grafana
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sgse22-grafana
                port:
                  number: 80
