praktikum/wortmann/files/deployments/tig-stack/ingress-influxdb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgse22-influxdb
  namespace: sgse22-tig
spec:
  rules:
    - host: sgse22-influxdb
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sgse22-influxdb
                port:
                  number: 80
